--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Cayman theme
-description: Cayman is a clean, responsive theme for GitHub Pages.
-show_downloads: true
+title: Mayank Vikash
+description: Student Developer and Creator of M SHORTS
+show_downloads: flase
 google_analytics:
 theme: jekyll-theme-cayman
