--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Mayank Vikash
 description: Student Developer and Creator of M SHORTS
-show_downloads: flase
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
