--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,8 @@
 title: Mayank Vikash
-description: Student Developer and Creator of M SHORTS
+description:
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
+---
+permalink: /404.html
+---
