--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Mayank Vikash
 description: I am passionate to learn about how technologies work, I will post about my learning here.
-show_downloads: true
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
 url: https://mayankvikash.ml/
