--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@ title: Mayank Vikash
 description: I am passionate to learn about how technologies work, I will post about my learning here.
 show_downloads: false
 google_analytics:
-theme: jekyll-theme-cayman
+theme: "just-the-docs"
+# jekyll-theme-cayman
 url: https://mayankvikash.ml/
 baseurl: ''
 ---
