--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,11 @@
-#title: Mayank Vikash
-#description: I am passionate to learn about how technologies work, I will post about my learning here.
-#show_downloads: false
-#google_analytics:
-#theme: jekyll-theme-cayman
-#url: https://mayankvikash.ml/
-#baseurl: ''
-#---
-#permalink: /404.html
-#---
+title: Mayank Vikash
+description: I am passionate to learn about how technologies work, I will post about my learning here.
+show_downloads: false
+google_analytics:
+theme: jekyll-theme-cayman
+url: https://mayankvikash.ml/
+baseurl: ''
+---
+permalink: /404.html
+---
 
-
-title: "Remote theme example"
-remote_theme: just-the-docs/just-the-docs
-color_scheme: "dark"
-search_enabled: false
