--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Mayank Vikash
 description: I am passionate to learn about how technologies work, I will post about my learning here.
 show_downloads: false
-google_analytics: 329782767
+google_analytics: UA-239529646-1
 theme: jekyll-theme-cayman
 url: https://mayankvikash.ml/
 baseurl: ''
