--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Mayank Vikash
 description: I am passionate to learn about how technologies work, I will post about my learning here.
+author: Mayank Vikash
 show_downloads: false
 google_analytics: UA-239529646-1
 theme: jekyll-theme-cayman
